stylesheets/_modules.scss
/* ... */
.module-message__sticker-container {
  // To ensure that images are centered if they aren't full width of bubble
  text-align: center;

  margin: {
    left: -12px;
    right: -12px;
    top: -9px;
    bottom: -5px;
  }

  &--with-content-below {
    margin-bottom: 5px;
  }

  &--with-content-above {
    margin-top: 4px;
  }
}

.module-message__img-attachment {
  margin-bottom: -3px;

  // redundant with attachment-container, but we get cursor flashing on move otherwise
  cursor: pointer;
}

.module-message__audio-attachment {
  margin-top: 2px;
}

.module-message__audio-attachment--with-content-below {
  margin-bottom: 5px;
}

.module-message__audio-attachment--with-content-above {
  margin-top: 6px;
}

.module-message__generic-attachment {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.module-message__generic-attachment--with-content-below {
  padding-bottom: 6px;
}

.module-message__generic-attachment--with-content-above {
  padding-top: 4px;
}

.module-message__generic-attachment__icon-container {
  position: relative;
}
.module-message__generic-attachment__spinner-container {
  padding-left: 4px;
  padding-right: 4px;
}

.module-message__generic-attachment__icon {
  background: url('../images/file-gradient.svg') no-repeat center;
  height: 44px;
  width: 56px;
  margin-left: -13px;
  margin-right: -14px;
  margin-bottom: -4px;

  // So we can center the extension text inside this icon
  display: flex;
  flex-direction: row;
  align-items: center;
}

.module-message__generic-attachment__icon-dangerous-container {
  position: absolute;

  top: -1px;
  right: -4px;

  height: 16px;
  width: 16px;

  border-radius: 50%;
  background-color: $color-white;
}

.module-message__generic-attachment__icon-dangerous {
  height: 16px;
  width: 16px;

  @include color-svg('../images/error-filled.svg', $color-core-red);
}

.module-message__generic-attachment__icon__extension {
  font-size: 10px;
  line-height: 13px;
  letter-spacing: 0.1px;
  text-transform: uppercase;

  // Along with flow layout in parent item, centers text
  text-align: center;
  width: 25px;
  margin-left: auto;
  margin-right: auto;

  // We don't have much room for text here, cut it off without ellipse
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: clip;

  color: $color-gray-90;
}

.module-message__generic-attachment__text {
  flex-grow: 1;
  margin-left: 8px;
  // The width of the icon plus our 8px margin
  max-width: calc(100% - 37px);
}

.module-message__generic-attachment__file-name {
  color: $color-gray-90;
  font-size: 14px;
  line-height: 18px;
  font-weight: 300;
  margin-top: 2px;

  // Handling really long filenames - cut them off
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.module-message__generic-attachment__file-name--incoming {
  color: $color-white;
}

.module-message__generic-attachment__file-size {
  color: $color-gray-90;
  font-size: 11px;
  line-height: 16px;
  letter-spacing: 0.3px;
  margin-top: 3px;
}

.module-message__generic-attachment__file-size--incoming {
  color: $color-white;
}

.module-message__generic-attachment__file-size--incoming {
  color: $color-white;
}

.module-message__link-preview {
  cursor: pointer;
  margin-left: -12px;
  margin-right: -12px;
  margin-top: -10px;
  margin-bottom: 5px;
  border-top-left-radius: 16px;
  border-top-right-radius: 16px;
}

.module-message__link-preview--with-content-above {
  margin-top: 4px;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}

.module-message__link-preview__content {
  padding: 8px;
  border-top-left-radius: 16px;
  border-top-right-radius: 16px;
  background-color: $color-white;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  border: 1px solid $color-black-015;
}

.module-message__link-preview__content--with-content-above {
  border-top: none;
  border-bottom: none;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}

.module-message__link-preview__icon_container {
  margin: -2px;
  margin-right: 8px;
  display: inline-block;
}

.module-message__link-preview__text--with-icon {
  margin-top: 5px;
}

.module-message__link-preview__title {
  color: $color-gray-90;
  font-size: 16px;
  font-weight: 300;
  letter-spacing: 0.15px;
  line-height: 22px;

  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.module-message__link-preview__location {
  margin-top: 4px;
  color: $color-gray-60;
  font-size: 12px;
  height: 16px;
  letter-spacing: 0.4px;
  line-height: 16px;
  text-transform: uppercase;
}

.module-message__author {
  color: $color-white;
  font-size: 13px;
  font-weight: 300;
  line-height: 18px;
  height: 18px;
  overflow-x: hidden;
  overflow-y: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;

  &__profile-name {
    font-style: italic;
  }
}

.module-message__author--with-tap-to-view-expired {
  color: $color-gray-75;
  font-size: 13px;
  font-weight: 300;
  line-height: 18px;
  height: 18px;
  overflow-x: hidden;
  overflow-y: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;

  &__profile-name {
    font-style: italic;
  }
}

.module-message__author_with_sticker {
  color: $color-gray-90;
  font-size: 13px;
  font-weight: 300;
  line-height: 18px;
  height: 18px;
  overflow-x: hidden;
  overflow-y: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;

  // Stickers are pretty narrow, so we allow this one element of a sticker
  //   message to go wider than normal.
  // There's a tension here, since this is width and not max-width; things will
  //   look bad for RTL users if we make it too wide.
  width: 300px;

  &__profile-name {
    font-style: italic;
  }
}
/* ... */

